Cloudformation/Cloudformation_OH.yml
---
#Dev VPC with publich Subnet in us-east-2
Resources:
  DEV:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.1.0/24"
      Tags: 
        - Key: "Name"
          Value: "DEV"
  DEVIG:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
      - Key: "Name"
        Value: "DEVIG"
  DEVIGATTACH:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref "DEVIG"
      VpcId: !Ref "DEV"
  DEVPubSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref "DEV"
      AvailabilityZone: us-east-2a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: DEVPublic_Subnet
  DEVPublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref "DEV"
      Tags:
        - Key: Name
          Value: DEV_public
  DEVPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: "DEVIGATTACH"
    Properties:
      RouteTableId: !Ref "DEVPublicRT"
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref "DEVIG"
  DEVPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref "DEVPubSubnet"
      RouteTableId: !Ref "DEVPublicRT"
  DEVSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow connections from specified CIDR ranges
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: "Name"
        Value: "DEV-Public"
      VpcId: !Ref "DEV"
#Prod VPC with publich Subnet in us-east-2
  PROD:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.2.0/24"
      Tags: 
        - Key: "Name"
          Value: "PROD"
  PRODIG:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
      - Key: "Name"
        Value: "PRODIG"
  PRODIGATTACH:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref "PRODIG"
      VpcId: !Ref "PROD"
  PRODPubSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref "PROD"
      AvailabilityZone: us-east-2a
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PRODPublic_Subnet
  PRODPublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref "PROD"
      Tags:
        - Key: Name
          Value: PROD_public
  PRODPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: "PRODIGATTACH"
    Properties:
      RouteTableId: !Ref "PRODPublicRT"
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref "PRODIG"
  PRODPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref "PRODPubSubnet"
      RouteTableId: !Ref "PRODPublicRT"
  PRODSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow connections from specified CIDR ranges
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: "Name"
        Value: "Prod-Public"
      VpcId: !Ref "PROD"
